feat: add cta button. close #170

--- a/views/apps.jade
+++ b/views/apps.jade
@@ -37,6 +37,7 @@ body
               .apps-right
                 p Calendar subscription gCal or iCal
                 p.tagline Add calendar url https://webuild.sg/cal
+                button.apps-cta Subscribe
           li.apps
             a(href="https://github.com/webuildsg/osx/releases")
               .apps-left
@@ -44,6 +45,7 @@ body
               .apps-right
                 p Mac desktop app
                 p.tagline Add a tiny menubar app
+                button.apps-cta Download
                 
       section
         ul.open-list.second
@@ -54,6 +56,7 @@ body
               .apps-right
                 p Slack bot with Blockspring
                 p.tagline Add a trigger word "webuild" for your chat
+                button.apps-cta Add to Slack
                 
 
   
