--- a/views/apps.jade
+++ b/views/apps.jade
@@ -29,7 +29,7 @@ body
         p We have integrations with some external services too!
 
       section
-        ul.open-list.first
+        ul.open-list
           li.apps
             a(href="https://webuild.sg/cal")
               .apps-left
