design: sync header design with other pages

--- a/views/apps.jade
+++ b/views/apps.jade
@@ -7,6 +7,7 @@ body
       header
         .container
           h1 we build!
+          .splash apps
           ul.list-social
             li 
               span.icon-feed 
@@ -23,11 +24,9 @@ body
             li 
               span.icon-volume-medium
               a(href="https://api.webuild.sg") api
+      .container 
+        p.subtitle We have integrations with some external services too!
     .main.container
-      .live
-        h3 We Build SG apps
-        p We have integrations with some external services too!
-
       section
         ul.open-list
           li.apps
