--- a/views/admin.jade
+++ b/views/admin.jade
@@ -26,7 +26,22 @@ body
               a(href="https://api.webuild.sg") api
     .main.container
       div#auth0(style='width: 320px; margin: 40px auto;')
-
+        
+      h3 Group not approved before
+      p.tagline Check if these groups are valid, and then add then to config/whitelistGroups.json
+      pre
+        each group in groups
+          br
+          code {
+          br
+          code    "group_url": "#{group.group_url}",
+          br
+          code    "group_name": "#{group.group_name}",
+          br
+          code    "group_id": #{group.group_id}
+          br
+          code },
+                                
   script(type='text/javascript', src='public/js/vendor/auth0-widget.js/build/auth0-widget.min.js')
   script(type='text/javascript').
     var widget = new Auth0Widget({domain: '#{auth0.domain}', clientID: '#{auth0.clientId}', callbackURL: window.location.origin + '/callback'});
