--- a/views/privacy.jade
+++ b/views/privacy.jade
@@ -25,20 +25,20 @@ body
               span.icon-volume-medium
               a(href="https://api.webuild.sg") api
       .container 
-        p.subtitle We have integrations with some external services too!
+        p.subtitle Exploring the tech scene in Singapore? Connect with designers, makers and engineers!
     .main.container    
       br  
       h3 Privacy Policy
       
       <p class="subtitle">Last updated: April 14, 2016</p>
       
-      p.body We Build SG ("us", "we", or "our") operates the https://webuild.sg website (the "Service").
+      p.body We Build SG ("us", "we", or "our") operates the <a href="https://webuild.sg">https://webuild.sg</a> website (the "Service").
       
       p.body This page informs you of our policies regarding the collection, use and disclosure of Personal Information when you use our Service.
       
       p.body We will not use or share your information with anyone except as described in this Privacy Policy.
       
-      p.body We do not use your Personal Information for providing and improving the Service. All data displayed on this website can be found publicly on Meetup.com, Github.com, Eventbrite.com and Facebook.com.
+      p.body We do not use your Personal Information for providing and improving the Service. All data displayed on this website can be found publicly on <a href="https://meetup.com">Meetup.com</a>, <a href="https://github.com">Github.com</a>, <a href="https://eventbrite.com">Eventbrite.com</a> and <a href="https://facebook.com">Facebook.com</a>.
       
       p.body 
         strong Log Data
@@ -55,15 +55,15 @@ body
       p.body
         strong Service Providers
       
-      p.body We may employ third party companies and individuals to facilitate our Service, to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.
+      p.body We employ third party companies and individuals to facilitate our Service, to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.
+      
+      p.body All data displayed on this website can be found publicly on <a href="https://meetup.com">Meetup.com</a>, <a href="https://github.com">Github.com</a>, <a href="https://eventbrite.com">Eventbrite.com</a>, <a href="https://youtube.com">Youtube.com</a> and <a href="https://facebook.com">Facebook.com</a>.
       
       p.body These third parties do not have access to your Personal Information.
       
       p.body 
         strong Security
-        
-      p.body
-        
+                
       p.body The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security.
       
       p.body 
@@ -72,6 +72,11 @@ body
       p.body Our Service contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site you visit.
       
       p.body We have no control over, and assume no responsibility for the content, privacy policies or practices of any third party sites or services.
+      
+      p.body 
+        strong Children
+        
+      p.body We do not specifically market to children under 13 neither collect their personal information.
       
       p.body 
         strong Changes To This Privacy Policy
@@ -84,3 +89,43 @@ body
         strong Contact Us
       
       p.body If you have any questions about this Privacy Policy, please contact us: webuildsg at gmail dot com.
+
+    footer
+      .container
+        <p>Checkout more cool events and people in startup, arts and tech with <br><a href="http://thelist.sg/">thelist.sg</a>, <a href="http://connections.sg/">connections.sg</a>, <a href="http://hackerspace.sg/calendar/hackerspacesg-events/">hackerspace</a>, <a href="http://bhappening.wordpress.com/">bhappening</a>, <a href="http://www.techinasia.com/tech-startup-events/">tech in asia</a></p>
+
+    ul.social
+      li
+        a(href='https://twitter.com/webuildsg')
+          span.footer-twitter
+        p Twitter
+      li
+        a(href='http://www.facebook.com/webuildsg')
+          span.footer-facebook
+        p Facebook
+      li
+        a(href='https://github.com/webuildsg')
+          span.footer-github
+        p GitHub
+      li
+        a(href='https://webuild.sg/cal')
+          span.footer-calendar
+        p Calendar
+      li
+        a(href='https://feeds.feedburner.com/WeBuildLive')
+          span.footer-rss
+        p RSS
+      li
+        a(href='https://itunes.apple.com/us/podcast/we-build-sg-live/id713804010')
+          span.footer-itunes
+        p iTunes
+
+  script(src='public/js/script.js')
+  script.
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-37308530-1', 'auto');
+      ga('send', 'pageview');
