feat: add itunes download link for iPhone / iPad. #222

--- a/views/apps.jade
+++ b/views/apps.jade
@@ -56,6 +56,14 @@ body
                 p Slack bot with Blockspring
                 p.tagline Add a trigger word "webuild" for your chat
                 button.apps-cta Add to Slack
+          li.apps
+            a(href="https://itunes.apple.com/us/app/we-build-sg/id1089421487")
+              .apps-left
+                img(src="/public/img/iOS.png", style="padding:1em 0;")
+              .apps-right
+                p iPhone / iPad app
+                p.tagline Get the latest events / repos on mobile
+                button.apps-cta Download
                 
 
   
