feat: add apps to the header links. close #223

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -4,26 +4,7 @@ body
     p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
 
   div.wrapper
-    .starter
-      header
-        .container
-          h1 we build!
-          ul.list-social
-            li 
-              span.icon-feed 
-              a(href="https://webuild.sg") main
-            li 
-              span.icon-music 
-              a(href="https://live.webuild.sg") live
-            li 
-              span.icon-cal 
-              a(href="https://data.webuild.sg") data
-            li 
-              span.icon-cc 
-              a(href="https://notes.webuild.sg") notes
-            li 
-              span.icon-volume-medium
-              a(href="https://api.webuild.sg") api
+    include ./layout/header.jade
     .main.container
       br
         
