--- a/views/index.jade
+++ b/views/index.jade
@@ -17,28 +17,7 @@ html(lang='en')
       p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
 
     div.wrapper
-      .starter
-        header
-          .container
-            h1 we build!
-            ul.list-social
-              li 
-                span.icon-feed 
-                a(href="https://webuild.sg") main
-              li 
-                span.icon-music 
-                a(href="https://live.webuild.sg") live
-              li 
-                span.icon-cal 
-                a(href="https://data.webuild.sg") data
-              li 
-                span.icon-cc 
-                a(href="https://notes.webuild.sg") notes
-              li 
-                span.icon-volume-medium
-                a(href="https://api.webuild.sg") api
-        .container 
-          p.subtitle Exploring the tech scene in Singapore? Connect with designers, makers and engineers!
+      include ./layout/header.jade
       .main.container
 
         //- a.live(href="https://live.webuild.sg")
