fix: amend instructions as firebase db is now used instead of config flat json files

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -11,7 +11,7 @@ body
       h3 Groups not approved before
       br
       p.tagline 
-        | If these groups are not approved before, then add them to the files <code>config/whitelistGroups.json</code> or <code>config/blacklist{PROVIDER}.json</code>.
+        | If these groups are not approved before, then add them to Firebase DB <code>whitelistGroups</code> or <code>blacklist{PROVIDER}</code>.
       
       if groups.length > 0
         pre
