tweak: amend title for admin page login to just LOGIN

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -28,7 +28,7 @@ body
       else 
         pre All events are in the approved groups!
         
-      h3 Login to Facebook to add events
+      h3 Login
       div#auth0(style='width: 320px; margin: 40px auto;')
         
     footer
