moved jade to pug

--- a/views/privacy.pug
+++ b/views/privacy.pug
@@ -1,9 +1,9 @@
-include ./layout/head.jade
+include ./layout/head.pug
 body
   //if lt IE 9
     p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
   div.wrapper
-    include ./layout/header.jade
+    include ./layout/header.pug
     .main.container    
       br  
       h3 Privacy Policy
