--- a/views/index.pug
+++ b/views/index.pug
@@ -10,14 +10,14 @@ doctype
 
 
 html(lang='en')
-  include ./layout/head.jade
+  include ./layout/head.pug
   body
 
     //if lt IE 9
       p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
 
     div.wrapper
-      include ./layout/header.jade
+      include ./layout/header.pug
       .main.container
 
         //- a.live(href="https://live.webuild.sg")
