tweak about page copywriting

--- a/views/about.pug
+++ b/views/about.pug
@@ -10,10 +10,10 @@ body
 
       p.body We Build SG curates the local grassroots ground-up community of <strong>engineers, designers and makers</strong> in Singapore.
 
-      p.body Any technology community in a city or region consists of <strong>four pillars</strong>: (1) academia and research institutes (2) military and defence (3) industry and startups (4) grassroots and voluntary organisations. We Build SG collects and gathers the activities of the 4th pillar which is also made up of people coming from the other 3 pillars of technology. We specifically collect activities on <strong>open events</strong> and <strong>open source</strong>.
+      p.body Any technology community in a city or region consists of <strong>four pillars</strong>: (1) educational and research institutes (2) government and military (3) industry and startups (4) grassroots and voluntary organisations. We Build SG collects and gathers the activities of the 4th pillar which is also made up of people coming from the other 3 pillars of technology. We specifically collect activities on <strong>open events</strong> and <strong>open source</strong>.
 
       p.body We curate, collect and gather information about the community in 4 ways: (1) automatically list open event and open source updates on <a href="https://webuild.sg">We Build SG Main</a> website (2) visualise the data collected through charts, graphs and maps on <a href="https://data.webuild.sg">We Build SG Data</a> (3) interview engineers, designers and makers through a live internet podcast with <a href="https://live.webuild.sg">We Build SG Live</a> (4) collate a list of useful tips for organising meetups, attending technical conferences and contributing to open source with <a href="https://notes.webuild.sg">We Build SG Notes</a>.
-      
+
     footer
       .container
         <p>Checkout more cool events and people in startup, arts and tech with <br><a href="http://thelist.sg/">thelist.sg</a>, <a href="http://connections.sg/">connections.sg</a>, <a href="http://hackerspace.sg/calendar/hackerspacesg-events/">hackerspace</a>, <a href="http://bhappening.wordpress.com/">bhappening</a>, <a href="http://www.techinasia.com/tech-startup-events/">tech in asia</a></p>
