feat: add android and chat bot links. close #244

--- a/views/apps.pug
+++ b/views/apps.pug
@@ -8,6 +8,14 @@ body
       section
         ul.open-list
           li.apps
+            a(href="https://play.google.com/store/apps/details?id=com.trinitystudio.webuildsg")
+              .apps-left
+                img(src="/public/img/android.png")
+              .apps-right
+                p Android app
+                p.tagline Get the latest events / repos on mobile
+                button.apps-cta Download
+          li.apps
             a(href="https://webuild.sg/cal")
               .apps-left
                 img(src="/public/img/gcal.png")
@@ -27,14 +35,6 @@ body
       section
         ul.open-list.second
           li.apps
-            a(href="https://open.blockspring.com/cheeaun/webuildsg-slack")
-              .apps-left
-                img(src="/public/img/slack.png")
-              .apps-right
-                p Slack bot with Blockspring
-                p.tagline Add a trigger word "webuild" for your chat
-                button.apps-cta Add to Slack
-          li.apps
             a(href="https://itunes.apple.com/us/app/we-build-sg/id1089421487")
               .apps-left
                 img(src="/public/img/iOS.png", style="padding:1em 0;")
@@ -42,6 +42,24 @@ body
                 p iPhone / iPad app
                 p.tagline Get the latest events / repos on mobile
                 button.apps-cta Download
+          li.apps
+            a(href="https://www.facebook.com/webuildsg/messages")
+              .apps-left
+                img(src="/public/img/fbchat.png")
+              .apps-right
+                p Facebook Chat bot
+                p.tagline Ask for "upcoming events"
+                button.apps-cta Connect via Messenger
+          li.apps
+            a(href="https://open.blockspring.com/cheeaun/webuildsg-slack")
+              .apps-left
+                img(src="/public/img/slack.png")
+              .apps-right
+                p Slack bot with Blockspring
+                p.tagline Add a trigger word "webuild" for your chat
+                button.apps-cta Add to Slack
+          
+          
                 
 
   
