add tip for patterns to avoid event clashes. close #233

--- a/views/index.pug
+++ b/views/index.pug
@@ -63,7 +63,7 @@ html(lang='en')
         input#check.event-checker(type='date', placeholder="dd/mm/yyyy")
         .spinner#loader
           div
-        p.tagline.center#results
+        p.tagline.center#results <strong>Tip:</strong> Avoid clashes with other events held on <br> <a href="http://data.webuild.sg/dataset/events-per-day-of-week/" target="_blank">most active days of the week</a> or <a href="http://data.webuild.sg/dataset/events-per-week-of-month/">most active week of the month</a>
         ul#clashed.open-list
 
         h3 open event talks
