--- a/views/admin.pug
+++ b/views/admin.pug
@@ -14,23 +14,22 @@ body
           
         table.table
           tr 
-            th Add 
-            th Remove 
+            th ✅ 
+            th ❌
             th Name
             th Upcoming event
-        
-        each group in groups
-          tr
-            td <input type="radio" name="group.group_id">
-            td <input type="radio" name="group.group_id">
-            td <a href="#{group.group_url}">#{group.group_name}</a>
-            td #{group}
+          each group in groups
+            tr
+              td <input type="radio" name="group.group_id">
+              td <input type="radio" name="group.group_id">
+              td <a href="#{group.group_url}">#{group.group_name}</a>
+              td <a href="#{group.upcoming_event_url}">#{group.upcoming_event_name}</a>
       
       h3 Upcoming events
       
       table.table
         tr 
-          th Remove 
+          th ❌ 
           th Name
           th Organiser
         each event in events
