--- a/views/admin.pug
+++ b/views/admin.pug
@@ -22,7 +22,7 @@ body
             tr
               td <input type="radio" name="group.group_id">
               td <input type="radio" name="group.group_id">
-              td <a href="#{group.group_url}">#{group.group_name}</a>
+              td <a href="#{group.group_url}">#{group.group_name}</a><br>ID: #{group.group_id}
               td <a href="#{group.upcoming_event_url}">#{group.upcoming_event_name}</a>
       
       h3 Upcoming events
