--- a/views/admin.pug
+++ b/views/admin.pug
@@ -20,10 +20,12 @@ body
             th Upcoming event
           each group in groups
             tr
-              td <input type="radio" name="#{group.group_id}" value="yes">
-              td <input type="radio" name="#{group.group_id}" value="no">
+              td <input type="radio" name="#{group.group_id}" data-platform="#{group.platform}" data-url="#{group.group_url}", data-name="#{group.group_name}" value="yes">
+              td <input type="radio" name="#{group.group_id}" data-platform="#{group.platform}" data-url="#{group.group_url}", data-name="#{group.group_name}" value="no">
               td <a href="#{group.group_url}">#{group.group_name}</a><br>ID: #{group.group_id}
               td <a href="#{group.upcoming_event_url}">#{group.upcoming_event_name}</a>
+      
+        button#update update groups
       
       h3 Upcoming events
       
@@ -72,6 +74,7 @@ body
         p iTunes
                                     
   script(src='public/js/auth0-widget.min.js')
+  script(src='public/js/admin.js')
   script(type='text/javascript').
     var widget = new Auth0Widget({domain: '#{auth0.domain}', clientID: '#{auth0.clientId}', callbackURL: window.location.origin + '/callback'});
     widget.signin({container: 'auth0', connections: ['facebook'], chrome: true, scope: 'openid profile user_groups user_events'},function(){
@@ -80,3 +83,4 @@ body
       elem.style.color = '#{error}' ? 'red' : 'MediumSeaGreen';
       err.parentNode.appendChild(elem);
     });
+    
