feat: add update groups button. #242

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -1,86 +1,87 @@
-include ./layout/head.pug
-body
-  //if lt IE 9
-    p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
-
-  div.wrapper
-    include ./layout/header.pug
-    .main.container
-      br
-      
-      if groups.length > 0
-        h3 New groups
+doctype
+html(lang='en')
+  include ./layout/head.pug
+  body
+    //if lt IE 9
+      p.chromeframe Your browser is <em>ancient!</em> <a href='http://browsehappy.com/'>Upgrade to a cool new browser</a> to experience this site!
+    div.wrapper
+      include ./layout/header.pug
+      .main.container
         br
-          
+        
+        if groups.length > 0
+          h3 New groups
+          br
+            
+          table.table
+            tr 
+              th ✅ 
+              th ❌
+              th Name
+              th Upcoming event
+            each group in groups
+              tr
+                td <input type="radio" name="#{group.group_id}" data-platform="#{group.platform}" data-url="#{group.group_url}", data-name="#{group.group_name}" value="yes">
+                td <input type="radio" name="#{group.group_id}" data-platform="#{group.platform}" data-url="#{group.group_url}", data-name="#{group.group_name}" value="no">
+                td <a href="#{group.group_url}">#{group.group_name}</a><br>ID: #{group.group_id}
+                td <a href="#{group.upcoming_event_url}">#{group.upcoming_event_name}</a>
+        
+          button#update update groups
+        
+        h3 Upcoming events
+        
         table.table
           tr 
-            th ✅ 
-            th ❌
+            th ❌ 
             th Name
-            th Upcoming event
-          each group in groups
+            th Organiser
+          each event in events
             tr
-              td <input type="radio" name="#{group.group_id}" data-platform="#{group.platform}" data-url="#{group.group_url}", data-name="#{group.group_name}" value="yes">
-              td <input type="radio" name="#{group.group_id}" data-platform="#{group.platform}" data-url="#{group.group_url}", data-name="#{group.group_name}" value="no">
-              td <a href="#{group.group_url}">#{group.group_name}</a><br>ID: #{group.group_id}
-              td <a href="#{group.upcoming_event_url}">#{group.upcoming_event_name}</a>
-      
-        button#update update groups
-      
-      h3 Upcoming events
-      
-      table.table
-        tr 
-          th ❌ 
-          th Name
-          th Organiser
-        each event in events
-          tr
-            td <input type="checkbox" name="event.id" value="no">
-            td <a href="#{event.url}">#{event.name}</a> <br> on #{event.formatted_time} <br> at #{event.location}
-            td <a href="#{event.group_url}">#{event.group_name}</a>
+              td <input type="checkbox" name="event.id" value="no">
+              td <a href="#{event.url}">#{event.name}</a> <br> on #{event.formatted_time} <br> at #{event.location}
+              td <a href="#{event.group_url}">#{event.group_name}</a>
 
-      h3 Login
-      div#auth0(style='width: 320px; margin: 40px auto;')
-        
-    footer
-      .container
-        <p>Checkout more cool events and people in startup, arts and tech with <br><a href="http://thelist.sg/">thelist.sg</a>, <a href="http://connections.sg/">connections.sg</a>, <a href="http://hackerspace.sg/calendar/hackerspacesg-events/">hackerspace</a>, <a href="http://bhappening.wordpress.com/">bhappening</a>, <a href="http://www.techinasia.com/tech-startup-events/">tech in asia</a></p>
+        h3 Login
+        div#auth0(style='width: 320px; margin: 40px auto;')
+          
+      footer
+        .container
+          <p>Checkout more cool events and people in startup, arts and tech with <br><a href="http://thelist.sg/">thelist.sg</a>, <a href="http://connections.sg/">connections.sg</a>, <a href="http://hackerspace.sg/calendar/hackerspacesg-events/">hackerspace</a>, <a href="http://bhappening.wordpress.com/">bhappening</a>, <a href="http://www.techinasia.com/tech-startup-events/">tech in asia</a></p>
 
-    ul.social
-      li
-        a(href='https://twitter.com/webuildsg')
-          span.footer-twitter
-        p Twitter
-      li
-        a(href='http://www.facebook.com/webuildsg')
-          span.footer-facebook
-        p Facebook
-      li
-        a(href='https://github.com/webuildsg')
-          span.footer-github
-        p GitHub
-      li
-        a(href='https://webuild.sg/cal')
-          span.footer-calendar
-        p Calendar
-      li
-        a(href='https://feeds.feedburner.com/WeBuildLive')
-          span.footer-rss
-        p RSS
-      li
-        a(href='https://itunes.apple.com/us/podcast/we-build-sg-live/id713804010')
-          span.footer-itunes
-        p iTunes
-                                    
-  script(src='public/js/auth0-widget.min.js')
-  script(src='public/js/admin.js')
-  script(type='text/javascript').
-    var widget = new Auth0Widget({domain: '#{auth0.domain}', clientID: '#{auth0.clientId}', callbackURL: window.location.origin + '/callback'});
-    widget.signin({container: 'auth0', connections: ['facebook'], chrome: true, scope: 'openid profile user_groups user_events'},function(){
-      var d = document, err = d.querySelector('.a0-avatar'), elem = d.createElement('div');
-      elem.innerText = '#{error}' ? 'Unauthorized user!' : '#{user}' ? 'Thanks #{user}!' : '';
-      elem.style.color = '#{error}' ? 'red' : 'MediumSeaGreen';
-      err.parentNode.appendChild(elem);
-    });
-    
+      ul.social
+        li
+          a(href='https://twitter.com/webuildsg')
+            span.footer-twitter
+          p Twitter
+        li
+          a(href='http://www.facebook.com/webuildsg')
+            span.footer-facebook
+          p Facebook
+        li
+          a(href='https://github.com/webuildsg')
+            span.footer-github
+          p GitHub
+        li
+          a(href='https://webuild.sg/cal')
+            span.footer-calendar
+          p Calendar
+        li
+          a(href='https://feeds.feedburner.com/WeBuildLive')
+            span.footer-rss
+          p RSS
+        li
+          a(href='https://itunes.apple.com/us/podcast/we-build-sg-live/id713804010')
+            span.footer-itunes
+          p iTunes
+                                      
+    script(src='public/js/auth0-widget.min.js')
+    script(src='public/js/script.js')
+    script(type='text/javascript').
+      var widget = new Auth0Widget({domain: '#{auth0.domain}', clientID: '#{auth0.clientId}', callbackURL: window.location.origin + '/callback'});
+      widget.signin({container: 'auth0', connections: ['facebook'], chrome: true, scope: 'openid profile user_groups user_events'},function(){
+        var d = document, err = d.querySelector('.a0-avatar'), elem = d.createElement('div');
+        elem.innerText = '#{error}' ? 'Unauthorized user!' : '#{user}' ? 'Thanks #{user}!' : '';
+        elem.style.color = '#{error}' ? 'red' : 'MediumSeaGreen';
+        err.parentNode.appendChild(elem);
+      });
+      
