add button style. #242

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -26,7 +26,7 @@ html(lang='en')
                 td <a href="#{group.group_url}">#{group.group_name}</a><br>ID: #{group.group_id}
                 td <a href="#{group.upcoming_event_url}">#{group.upcoming_event_name}</a>
         
-          button#update update groups
+          button#update.button update groups
         
         h3 Upcoming events
         
