--- a/views/admin.pug
+++ b/views/admin.pug
@@ -25,9 +25,7 @@ html(lang='en')
                 td <input type="radio" name="#{group.group_id}" data-platform="#{group.platform}" data-url="#{group.group_url}", data-name="#{group.group_name}" value="no">
                 td <a href="#{group.group_url}">#{group.group_name}</a><br>ID: #{group.group_id}
                 td <a href="#{group.upcoming_event_url}">#{group.upcoming_event_name}</a>
-        
-          button#update.button update groups
-        
+                
         h3 Upcoming events
         
         table.table
@@ -37,10 +35,12 @@ html(lang='en')
             th Organiser
           each event in events
             tr
-              td <input type="checkbox" name="event.id" value="no">
+              td <input type="checkbox" name="#{event.id}" data-formmated-time="#{event.formatted_time}" data-url="#{event.url}" value="blacklistEvent">
               td <a href="#{event.url}">#{event.name}</a> <br> on #{event.formatted_time} <br> at #{event.location}
               td <a href="#{event.group_url}">#{event.group_name}</a>
 
+        button#update.button Update 
+        
         h3 Login
         div#auth0(style='width: 320px; margin: 40px auto;')
           
