initial test graph

--- a/views/layout/head.pug
+++ b/views/layout/head.pug
@@ -14,6 +14,7 @@ head
   meta(property='og:type', content='website')
 
   link(rel='stylesheet', href='https://assets.webuild.sg/css/style.css')
+  link(rel='stylesheet', href='form.css')
   link(rel='icon', href='https://assets.webuild.sg/favicon.ico', type='image/x-icon')
   link(rel='apple-touch-icon', href='https://assets.webuild.sg/apple-touch-icon.png')
   link(rel='apple-touch-icon', sizes='72x72', href='https://assets.webuild.sg/apple-touch-icon-72x72-precomposed.png')
